# Breathing

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  io.github.seadve.Breathing.json  meson.build  meson_options.txt  typos.toml
.ci/: flathub_wait_for_build.sh
.github/workflows/: ci.yml  flathub.yml  testing.yml
build-aux/: io.github.seadve.Breathing.Devel.json
data/: breathing.gresource.xml  io.github.seadve.Breathing.appdata.xml.in  io.github.seadve.Breathing.desktop.in  io.github.seadve.Breathing.desktop.in.in  io.github.seadve.Breathing.gschema.xml  io.github.seadve.Breathing.gschema.xml.in  io.github.seadve.Breathing.metainfo.xml.in  io.github.seadve.Breathing.metainfo.xml.in.in  meson.build
data/logo/: meson.build
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: circle-visualizer.ui  visualizer.ui  window.ui
data/ui/: shortcuts.ui  style.css  window.ui
po/: LINGUAS  POTFILES  POTFILES.in  ar.po  az.po  be.po  bg.po  bqi.po  breathing.pot  ca.po  cs.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fil.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  (+8 more)
src/: animator.rs  application.rs  breathing.in  circle.rs  circle_visualizer.rs  main.py  main.rs  meson.build  timer.py  visualizer.rs  window.py  window.rs
